--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 html,body{
     height: 100%;
     margin: 0;
+    overflow: hidden;
 }
+
 canvas{
-    border: 1px solid #000;
     widows: 100%;
     height: 100%;
 }
